--- a/project2.ioc
+++ b/project2.ioc
@@ -90,19 +90,19 @@ PA2.Signal=GPIO_Output
 PA5.GPIOParameters=PinState,GPIO_Label
 PA5.GPIO_Label=LED0
 PA5.Locked=true
-PA5.PinState=GPIO_PIN_RESET
+PA5.PinState=GPIO_PIN_SET
 PA5.Signal=GPIO_Output
 PA6.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA6.GPIO_Label=LED1
 PA6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PA6.GPIO_PuPd=GPIO_NOPULL
 PA6.Locked=true
-PA6.PinState=GPIO_PIN_RESET
+PA6.PinState=GPIO_PIN_SET
 PA6.Signal=GPIO_Output
 PA7.GPIOParameters=PinState,GPIO_Label
 PA7.GPIO_Label=LED2
 PA7.Locked=true
-PA7.PinState=GPIO_PIN_RESET
+PA7.PinState=GPIO_PIN_SET
 PA7.Signal=GPIO_Output
 PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=B
@@ -111,27 +111,27 @@ PA9.Signal=GPIO_Output
 PB0.GPIOParameters=PinState,GPIO_Label
 PB0.GPIO_Label=LED3
 PB0.Locked=true
-PB0.PinState=GPIO_PIN_RESET
+PB0.PinState=GPIO_PIN_SET
 PB0.Signal=GPIO_Output
 PB1.GPIOParameters=PinState,GPIO_Label
 PB1.GPIO_Label=LED4
 PB1.Locked=true
-PB1.PinState=GPIO_PIN_RESET
+PB1.PinState=GPIO_PIN_SET
 PB1.Signal=GPIO_Output
 PB10.GPIOParameters=PinState,GPIO_Label
 PB10.GPIO_Label=LED5
 PB10.Locked=true
-PB10.PinState=GPIO_PIN_RESET
+PB10.PinState=GPIO_PIN_SET
 PB10.Signal=GPIO_Output
 PB11.GPIOParameters=PinState,GPIO_Label
 PB11.GPIO_Label=LED6
 PB11.Locked=true
-PB11.PinState=GPIO_PIN_RESET
+PB11.PinState=GPIO_PIN_SET
 PB11.Signal=GPIO_Output
 PB12.GPIOParameters=PinState,GPIO_Label
 PB12.GPIO_Label=LED7
 PB12.Locked=true
-PB12.PinState=GPIO_PIN_RESET
+PB12.PinState=GPIO_PIN_SET
 PB12.Signal=GPIO_Output
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=E
